sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:10: error: type mismatch;
 found   : Unit
 required: Int
    numABouger = longerWay(nbrB, posJABouger)
                          ^NaiveBaseball:19: warning: enclosing method longerWay has result type Unit: return value discarded
    return player2
    ^NaiveBaseball:29: warning: enclosing method longerWay has result type Unit: return value discarded
    return getPlayerColor(numBase,1)
    ^NaiveBaseball:32: warning: enclosing method longerWay has result type Unit: return value discarded
    return getPlayerColor(numBase,2)
    ^